python wasm local scoring.
